# word-def-plugin-multilanguage-chatgpt

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  api-reference.html  code-of-conduct.html  contributing.html  design-and-architecture.html  genindex.html  getting-started.html  index.html  objects.inv  plugin-module.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: build-documentation.yml  build-package.yml  integration-test.yml  main.yml  multiple-test-suite.yml  publish-package.yml  single-test-suite.yml
_modules/: index.html
_modules/danoan/word_def/plugins/modules/: multilanguage_chatgpt.html
_sources/: contributing.md.txt  index.rst.txt
_sources/reference/: danoan.rst.txt  danoan.word_def.plugins.modules.multilanguage_chatgpt.rst.txt  danoan.word_def.plugins.modules.rst.txt  danoan.word_def.plugins.rst.txt  danoan.word_def.rst.txt
dev/clean/: clean.sh
dev/create-venv/: create-venv.sh
dev/extract-sdist/: extract-sdist.sh
docs/: api-reference.rst  conf.py  design-and-architecture.md  getting-started.md  index.rst  plugin-module.rst  requirements.txt
docs/_static/css/: custom.css
reference/: danoan.html  danoan.word_def.html  danoan.word_def.plugins.html  danoan.word_def.plugins.modules.html  danoan.word_def.plugins.modules.multilanguage_chatgpt.html
src/danoan/word_def/plugins/modules/: multilanguage_chatgpt.py
test/: conftest.py  run-doc-test.sh
test/plugins/modules/multilanguage_chatgpt/: test_multilanguage_chatgpt.py  test_openai.py
test/plugins/modules/multilanguage_chatgpt/input/: get-definition.json  get-pos-tag.json  get-synonym.json  get-usage-example.json
